# xdg-portal-test-kde

./: .flatpak-manifest.json  .gitignore  .kde-ci.yml  CMakeLists.txt  README.md
flatpak-build/: Makefile  build.sh  org.kde.xdg-portal-test-kde.json  portal-test.json  qtbase.json
src/: CMakeLists.txt  main.cpp  portaltest.cpp  portaltest.h  portaltest.ui  xdgexporterv2.cpp  xdgexporterv2.h  xdgportaltest.cpp  xdgportaltest.h  xdgportaltest.ui
src/data/: data.qrc  patschen.desktop
src/dropsite/: droparea.cpp  droparea.h  dropsitewindow.cpp  dropsitewindow.h
